examples/test/testpolicy6061.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6061
  namespace: namespace260
spec:
  podSelector:
    matchLabels:
      key30: value23
      key24: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value18
      podSelector:
        matchLabels:
          key18: value26
          key49: value33
